--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -9,31 +9,28 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/noteItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/noteItem"
         android:layout_margin="8dp"
         android:background="#3D5AFE">
 
         <TextView
             android:id="@+id/textViewNoteTitle"
             android:layout_width="0dp"
-            android:textColor="@color/white"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:text="@{note.title}"
-            android:maxLines="1"
             android:ellipsize="end"
+            android:maxLines="1"
+            android:text="@{note.title}"
+            android:textColor="@color/white"
             android:textSize="23sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/buttonDelete"
@@ -46,5 +43,21 @@
             app:layout_constraintVertical_bias="0.5"
             app:srcCompat="@drawable/delete"
             app:tint="#F80303" />
+
+        <TextView
+            android:id="@+id/textViewDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="8dp"
+            android:fontFamily="sans-serif-thin"
+            android:text="@{note.date}"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewNoteTitle" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
